k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-api
spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-demo-api

  template:
    metadata:
      labels:
        app: devops-demo-api

    spec:
      serviceAccountName: devops-demo-api
      containers:
        - name: devops-demo-api
          image: 891568748363.dkr.ecr.ap-south-1.amazonaws.com/devops-demo-api:1.1

          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
